--- a/do-this.html
+++ b/do-this.html
@@ -10,6 +10,14 @@
     <p>Today when i woke up,I told myself that i am the best and in everything that i purpose to do must be a success. Its not easy and I know and actually i can feel that the are teary days in the future but guess what guys, I am ready!I am ready to achieve exactly what i want and even more. Those that believe in me shall not be disappointed.</p>
     <h2>The End-Game</h2>
     <p>Have the your end goal in mind. With an end goal in mind,however hard the journey is to achieving your dream, all that will not matter. Be persistent and resilient to the pressure you will definately enjoy the outcome. So take it easy and remember why you started.
-       <img src="./img/me.jpg" alt="">
+
+      <ol>
+      <li>mum</li>
+      <li>dad</li>
+      <li>sisters</li>
+      </ol>
+     <p>Check out this amazing school<a href="http://andela Kenya.com/">Andela Kenya</a>. Dream place to work.</p>
+       <img src="./img/me.jpg" width="200px"height="200px" alt="">
+       <<img src="./img/sexy.jpg" width="200px" height="200px" alt="">
   </body>
 </html>
