--- a/do-this.html
+++ b/do-this.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>POSITIVITY</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <h1>Beautiful Day Smiles On</h1>
